--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "next": "latest",
     "next-sanity": "^0.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
     "react-portable-text": "^0.4.3"
   },
   "devDependencies": {
